# recs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  clippy.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: default.md
.github/workflows/: ci.yml  pull_request.yml
benchmarking/: README.md  bench_n_body.py
benchmarking/graphs/n-body/: README.md  n-body-graphs.py
case-studies/n-body/entt/: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
case-studies/n-body/unity/: README.md
case-studies/n-body/unity/N-body/: .gitignore
case-studies/n-body/unity/N-body/Assets/Moon/: Moon (ECS Variant).prefab  Moon.mat  Moon.prefab
case-studies/n-body/unity/N-body/Assets/Scenes/ECS/: Scene.unity  SubScene.unity
case-studies/n-body/unity/N-body/Assets/Scenes/GameObjects/: Scene.unity
case-studies/n-body/unity/N-body/Assets/Scripts/: Constants.cs
case-studies/n-body/unity/N-body/Assets/Scripts/ECS/Authoring/: BodyAuthoring.cs  BodySpawnerAuthoring.cs
case-studies/n-body/unity/N-body/Assets/Scripts/ECS/Components/: Acceleration.cs  BodySpawner.cs  Mass.cs  Velocity.cs
case-studies/n-body/unity/N-body/Assets/Scripts/ECS/Systems/: AccelerationSystem.cs  BenchmarkSystem.cs  BodySpawnerSystem.cs  GravitySystem.cs  MovementSystem.cs
case-studies/n-body/unity/N-body/Assets/Scripts/GameObjects/: Body.cs  BodySpawner.cs
case-studies/n-body/unity/N-body/Assets/Settings/: Universal Render Pipeline Asset.asset  Universal Render Pipeline Asset_Renderer.asset  UniversalRenderPipelineGlobalSettings.asset
case-studies/n-body/unity/N-body/Assets/Sun/: Sun (ECS Variant).prefab  Sun.mat  Sun.prefab
case-studies/n-body/unity/N-body/ProjectSettings/: EditorBuildSettings.asset  EditorSettings.asset  EntitiesClientSettings.asset  GraphicsSettings.asset  InputManager.asset  PackageManagerSettings.asset  ProjectSettings.asset  ShaderGraphSettings.asset  URPProjectSettings.asset  UnityConnectSettings.asset
crates/component_storage/: Cargo.toml  planning.txt
crates/component_storage/src/: archetype.rs  archetype_storage.rs  column.rs  entity.rs  lib.rs  main.rs  sparse_data_storage.rs  sparse_set.rs  sparse_set.rs.old  table.rs
crates/ecs/: Cargo.toml
crates/ecs/benches/: example.rs
crates/ecs/examples/: basic.rs  simple.rs
crates/ecs/proptest-regressions/: lib.txt
crates/ecs/proptest-regressions/systems/: iteration.txt
crates/ecs/src/: archetypes.rs  filter.rs  lib.rs  logging.rs  pool.rs  profiling.rs  schedule.rs  scheduler_rayon.rs  scheduling.rs  storage.rs  system_precedence.rs
crates/ecs/src/systems/: command_buffers.rs  iteration.rs  mod.rs
crates/ecs/tests/: application_tests.rs  system_equivalence.rs
crates/ecs_bench_suite/: Cargo.toml
crates/ecs_bench_suite/benches/: add_remove.rs  benchmarks.rs  frag_iter.rs  heavy_compute.rs  n_body.rs  rain_simulation.rs  schedule.rs  simple_insert.rs  simple_iter.rs
crates/ecs_bench_suite/src/: lib.rs
crates/ecs_bench_suite/src/bevy/: add_remove.rs  frag_iter.rs  heavy_compute.rs  mod.rs  n_body.rs  rain_simulation.rs  schedule.rs  simple_insert.rs  simple_iter.rs
crates/ecs_bench_suite/src/naive/: add_remove.rs  heavy_compute.rs  mod.rs  simple_insert.rs  simple_iter.rs
crates/ecs_bench_suite/src/planck_ecs/: simple_insert.rs
crates/ecs_bench_suite/src/recs/: add_remove.rs  frag_iter.rs  heavy_compute.rs  mod.rs  n_body.rs  n_body_old.rs  rain_simulation.rs  schedule.rs  simple_insert.rs  simple_iter.rs
crates/ecs_bench_suite/src/shipyard/: frag_iter.rs  heavy_compute.rs  schedule.rs
crates/ecs_bench_suite/tests/: debug_benchmarks.rs  recs_n_body_manual.rs
crates/gfx/: Cargo.toml  build.rs
crates/gfx-plugin/: Cargo.toml
crates/gfx-plugin/examples/: rendered-ecs.rs
crates/gfx-plugin/src/: lib.rs  rendering.rs
crates/gfx/examples/: rendered-app.rs
crates/gfx/proptest-regressions/: time.txt
crates/gfx/src/: camera.rs  engine.rs  instance.rs  lib.rs  light.wgsl  renderer.rs  resources.rs  shader.wgsl  texture.rs  time.rs  uniform.rs  window.rs
crates/hello-world/: Cargo.toml
crates/hello-world/examples/: simple.rs
crates/hello-world/src/: lib.rs
crates/n-body/: Cargo.toml  build.rs
crates/n-body/benches/: bevy_vs_recs.rs  recs_n_body.rs
crates/n-body/examples/: n_body_demo.rs
crates/n-body/src/: lib.rs  main.rs  scenes.rs
crates/rain-simulation/: Cargo.toml
crates/rain-simulation/assets/: moon.mtl
crates/rain-simulation/examples/: rain_demo.rs
crates/rain-simulation/src/: lib.rs  scene.rs
crates/recs-gfx/: Cargo.toml
crates/recs-gfx/examples/: rendered-app.rs
crates/recs-gfx/src/: engine.rs  instance.rs  model.rs  renderer.rs  shader.wgsl  texture.rs  time.rs
crates/scheduler/: Cargo.toml
crates/scheduler/benches/: independent_systems.rs
crates/scheduler/examples/: parallel.rs  print_schedule.rs  profile_comparison.rs  profiling.rs
crates/scheduler/proptest-regressions/: precedence.txt
crates/scheduler/proptest-regressions/schedule/: mod.txt
crates/scheduler/src/: executor.rs  lib.rs  precedence.rs  schedule.rs  schedule_dag.rs  system_dependency_graph.rs
crates/scheduler/src/executor/: mod.rs  worker.rs
crates/scheduler/src/schedule/: mod.rs
crates/scheduler/tests/: correctness.rs  worker_pool_tests.rs
crates/test_utils/: Cargo.toml
crates/test_utils/src/: lib.rs
documents/: contribution-report.md  git-workflow.md  group-contract.md  log.md
documents/meeting-minutes/: 2023-01-17.md  2023-01-20.md  2023-01-23.md  2023-01-27.md  2023-01-30.md  2023-02-03.md  2023-02-06.md  2023-02-09.md  2023-02-13.md  2023-02-17.md  2023-02-20.md  2023-02-24.md  2023-02-27.md  2023-03-03.md  2023-03-06.md  2023-03-10.md  2023-03-20.md  2023-03-21-halftime-meeting.md  2023-03-24.md  2023-03-27.md  2023-03-31.md  2023-04-04.md  2023-04-11.md  2023-04-14.md  2023-04-18.md  2023-04-20.md  2023-04-25.md  2023-04-28.md  2023-05-02.md  2023-05-05.md  2023-05-09.md  2023-05-12.md  2023-05-15.md  meeting-template.md
