[workspace]
package.edition = "2021"
resolver = "2"

members = [
    "crates/*",
]

[profile.release]
debug = true # Include debug symbols in release binaries

[workspace.dependencies]
criterion = { version = "0.4", features = ["html_reports"] } # For benchmarking
proptest = "1.0"      # Property-based testing tools and harness
test-strategy = "0.3" # Prop-test macros that are more ergonomic than the ones from proptest
approx = "0.5"        # For approximate floating-point comparisons
crossbeam = "0.8"     # Useful concurrency primitives
paste = "1.0"         # Allows type names to be composed in macros
test-case = "3.0"     # For parameterized tests
ntest = "0.9"         # To set timeouts on tests
tracing = "0.1"       # Configurable logging with different log-levels
color-eyre = "0.6"    # Pretty-printed error logging and tracing
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # Tools for composing subscribers (to collect tracing data)
tracing-error = "0.2" # Enriches error handling with tracing diagnostic information
test-log = { version = "0.2", default-features = false, features = ["trace"] } # Enables tracing logs to be printed inside tests
thiserror = "1.0"     # Macros for generating error enums/structs
itertools = "0.10"    # Iterator helper functions
