[package]
name = "ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0"

[dev-dependencies]
criterion = { workspace = true }        # For benchmarking
proptest = { workspace = true }         # Property-based testing tools and harness
test-strategy = { workspace = true }    # Prop-test macros that are more ergonomic than the ones from proptest
approx = { workspace = true }           # For approximate floating-point comparisons
