[package]
name = "ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false # Disable ordinary libtest benchmark harness since we're running criterion

[dependencies]
crossbeam = { workspace = true }        # Useful concurrency primitives
paste = { workspace = true }            # Allows type names to be composed in macros

[dev-dependencies]
criterion = { workspace = true }        # For benchmarking
proptest = { workspace = true }         # Property-based testing tools and harness
test-strategy = { workspace = true }    # Prop-test macros that are more ergonomic than the ones from proptest
approx = { workspace = true }           # For approximate floating-point comparisons
test-case = { workspace = true }        # For parameterized tests
ntest = { workspace = true }            # To set timeouts on tests

[[bench]]
name = "example"
harness = false
