[package]
name = "ecs"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false # Disable ordinary libtest benchmark harness since we're running criterion

[features]
profile = []                            # Enables profiling with Tracy

[dependencies]
crossbeam = { workspace = true }        # Useful concurrency primitives
paste = { workspace = true }            # Allows type names to be composed in macros
tracing = { workspace = true }          # Configurable logging with different log-levels
tracing-subscriber = { workspace = true } # Tools for composing subscribers (to collect tracing data)
tracing-error = { workspace = true }    # Enriches error handling with tracing diagnostic information
color-eyre = { workspace = true }       # Pretty-printed error logging and tracing
thiserror = { workspace = true }        # Macros for generating error enums/structs
itertools = { workspace = true }        # Iterator helper functions
time = { workspace = true }             # Time-related functions
tracing-tracy = { workspace = true }    # Tracing integration with Tracy
fnv = { workspace = true }              # Faster hasher
nohash-hasher = { workspace = true }    # Identity hash
dyn-clone = { workspace = true }        # Allows cloning of trait-objects.
parking_lot = { workspace = true }      # Faster than std synchronization primitives.
num = { workspace = true }              # Traits for numeric types


[dev-dependencies]
test_utils = { path = "../test_utils" }
criterion = { workspace = true }        # For benchmarking
proptest = { workspace = true }         # Property-based testing tools and harness
test-strategy = { workspace = true }    # Prop-test macros that are more ergonomic than the ones from proptest
approx = { workspace = true }           # For approximate floating-point comparisons
test-case = { workspace = true }        # For parameterized tests
ntest = { workspace = true }            # To set timeouts on tests
test-log = { workspace = true }         # Enables tracing logs to be printed inside tests
reltester = { workspace = true }        # Automatic verification of equivalence relations
