[package]
name = "ecs_bench_suite"
version = "0.1.0"
authors = ["Thomas Gillen <thomas.gillen@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false # Disable ordinary libtest benchmark harness since we're running criterion

[features]
bench-all-engines = []              # Enables benchmarking all other (non-RECS) engines

[dependencies]
ecs = { path = "../ecs" }
scheduler = { path = "../scheduler" }
n-body = { path = "../n-body" }
bevy_ecs = "0.10.0"
bevy_tasks = "0.10.0"
bincode = "1.3"
cgmath = { version = "0.18", features = ["serde"] }
hecs = { version = "0.10.0", features = ["column-serialize", "row-serialize"] }
legion = "0.4"
planck_ecs = { version = "1.1.0", features = ["parallel"] }
rayon = "1.5"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
shipyard = "0.6.0"
specs = {version = "0.18", features = ["serde"] }
specs-derive = "0.4.1"
crossbeam = { workspace = true }        # Useful concurrency primitives

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rayon = "1.3"

[[bench]]
name = "simple_insert"
harness = false

[[bench]]
name = "simple_iter"
harness = false

[[bench]]
name = "frag_iter"
harness = false

[[bench]]
name = "schedule"
harness = false

[[bench]]
name = "heavy_compute"
harness = false

[[bench]]
name = "add_remove"
harness = false

[[bench]]
name = "n_body"
harness = false
