[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false # Disable ordinary libtest benchmark harness since we're running criterion

[dependencies]
daggy = "0.8.0"                         # Directed Acyclic Graphs
ecs = { path = "../ecs" }               # RECS ECS core
itertools = "0.10.5"                    # Iterator helper functions
crossbeam = "0.8.2"                     # A bunch of concurrency-primitives, including concurrent work-stealing deques used for scheduler.

[dev-dependencies]
criterion = { workspace = true }        # For benchmarking
proptest = { workspace = true }         # Property-based testing tools and harness
test-strategy = { workspace = true }    # Prop-test macros that are more ergonomic than the ones from proptest
approx = { workspace = true }           # For approximate floating-point comparisons

[[bench]]
name = "example"
harness = false
