[package]
name = "test_utils"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false # Disable ordinary libtest benchmark harness since we're running criterion

[dependencies]
ecs = { path = "../ecs" }
proptest = { workspace = true }         # Property-based testing tools and harness
